WebCore: Cannot pres Enter to escape from bulleted list when <ul> is a child of <li>. https://bugs.webkit.org/show_bug.cgi?id=24866

Patch by Ryosuke Niwa <rniwa@webkit.org> on 2009-09-02
Reviewed by Eric Seidel.

This patch modifies breakOutOfEmptyListItem to break out of a properly nested list
(a list to break out of is inside another list item).

When the empty list item appears at the end of another list item, WebKit breaks out of
the outer list item, and adds new item below the outer list item.
Otherwise, WebKit breaks out of the the inner list item and inserts new paragraph.

Test: editing/execCommand/break-out-of-empty-list-item.html

* editing/CompositeEditCommand.cpp:
(WebCore::CompositeEditCommand::breakOutOfEmptyListItem):

LayoutTests: Cannot press Enter to escape from bulleted list when <ul> is a child of <li>.
https://bugs.webkit.org/show_bug.cgi?id=24866

Patch by Ryosuke Niwa <rniwa@webkit.org> on 2009-09-02
Reviewed by Eric Seidel.

This patch adds a test to make sure WebKit break out of an empty list item.

* editing/execCommand/break-out-of-empty-list-item-expected.txt: Added.
* editing/execCommand/break-out-of-empty-list-item.html: Added.
* editing/execCommand/resources/break-out-of-empty-list-item.js: Added.
(pressKey):
(enterAtTarget):
(testBreakOutOfEmptyListItem):



Canonical link: https://commits.webkit.org/39563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47987 268f45cc-cd09-0410-ab3c-d52691b4dbfc